--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           node-version: 16.x
           cache: 'npm'
+          cache-dependency-path: vite-project/package-lock.json 
 
       - run: npm ci # Install our node modules
       - run: npm test # Run our test script
